<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditaUsuarios">

    <TextView
        android:id="@+id/view_titulo_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/view_titulo_edita"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_correo_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="26dp"
        android:text="@string/view_correo_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_titulo_edita" />

    <TextView
        android:id="@+id/view_nombre_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_nombre_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_correo_edita" />

    <TextView
        android:id="@+id/view_apellido_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_apellido_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_nombre_edita" />

    <TextView
        android:id="@+id/view_rol_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_rol_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_apellido_edita" />

    <TextView
        android:id="@+id/view_usuario_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/view_usuario_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_rol_edita" />

    <TextView
        android:id="@+id/view_pass_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/view_pass_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_usuario_edita" />

    <TextView
        android:id="@+id/view_con_pass_edita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="27dp"
        android:text="@string/view_con_pass_edita"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pass_edita" />

    <EditText
        android:id="@+id/camp_correo_edita"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/camp_nombre_edita"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_correo_edita" />

    <EditText
        android:id="@+id/camp_apellido_edita"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_nombre_edita" />

    <Spinner
        android:id="@+id/spinner_edita"
        android:layout_width="138dp"
        android:layout_height="33dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_apellido_edita" />

    <EditText
        android:id="@+id/camp_usuario_edita"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_edita" />

    <EditText
        android:id="@+id/camp_pass_edita"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/camp_con_pass_edita"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_pass_edita" />

    <Button
        android:id="@+id/btn_elimina_usu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_elimina_usu"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_con_pass_edita" />

    <Button
        android:id="@+id/btn_actualiza_usu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="15dp"
        android:text="@string/btn_actualiza_usu"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_con_pass_edita" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="208dp"
        android:layout_height="34dp"


        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/mensaje_edita"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camp_usuario_edita" />

</android.support.constraint.ConstraintLayout>